# cosmo

./: .gitmodules  README.md
controllers/keyboard_controller/: CMakeLists.txt  package.xml
controllers/keyboard_controller/test/: servoConfigTest.py
cosmo/: CMakeLists.txt  package.xml
cosmo/include/cosmo/: state.h
hardware/motor_driver/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hardware/motor_driver/config/: motor_params.yaml
hardware/motor_driver/include/: util.h
hardware/motor_driver/include/motor_driver/: driver.h  driver_nodelet.h  gait_controller.h  inverse_kinematics.h  kinematics.h  stance_controller.h  swing_controller.h  util.h
hardware/motor_driver/msg/: MotorCommand.msg  MovementState.msg  State.msg
hardware/motor_driver/src/: driver.cpp  driver_nodelet.cpp  gait_controller.cpp  inverse_kinematics.cpp  kinematics.cpp  stance_controller.cpp  swing_controller.cpp
